sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:8: error: not found: value A
    var valA=getValeur(A)
                       ^