sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
	val lgr=getNombreValeurs()
  
  
  for(pivot<-0 to lgr-2){
    var petitA=pivot
    var valA=getValeur(A)
    for(b <-pivot to lgr){
      if(getValeur(b)<valA){
        petitA=b
      }
    }
    echange(pivot,petitA)
  }}